--- a/audiotestHTML/templates/index.html
+++ b/audiotestHTML/templates/index.html
@@ -7,7 +7,7 @@
     <title>Reconnaissance Vocale</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> <!-- Inclure FontAwesome -->
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="static/style.css">
 </head>
 
 <body>
@@ -32,95 +32,9 @@
 
         <div id="result"></div>
     </div>
-<script>
-    let currentResultIndex = 0;
-let resultsArray = [];
-
-function showNextVerse() {
-    if (resultsArray.length > 0) {
-        currentResultIndex = (currentResultIndex + 1) % resultsArray.length;
-        displayCurrentResult();
-    }
-}
-
-function displayCurrentResult() {
-    const currentResult = resultsArray[currentResultIndex];
-
-    if (currentResult) {
-        const suraName = currentResult.sura_name;
-        const resultMessage = `
-            <p>Verset trouvé :</p>
-            <ul>
-                <li>Sura: ${suraName}</li>
-                <li>Texte: ${currentResult.text}<span data-type="eoa" class="eoAaya">Verse: ${currentResult.aya}</span></li>
-            </ul>
-        `;
-        appendToConsole(resultMessage, 'success');
-    }
-}
-
-async function startRecording() {
-    appendToConsole('Enregistrement démarré...', 'info');
-    
-    var textDisplay = document.getElementById('text-display');
-    textDisplay.classList.add('visible');
-    
-    try {
-        const response = await fetch('/transcribe', { method: 'POST' });
-        if (!response.ok) {
-            throw new Error('Network response was not ok');
-        }
-        const text = await response.text();
-
-        try {
-            const data = JSON.parse(text);
-            if (data.result) {
-                const sura_number = data.result[0];
-                const verse = data.result[1];
-                const texte = data.result[2];
-                const sura_name = data.sura_name;
-
-                const resultMessage = `
-                    <p class="verse-info">السورة: ${sura_name}</p>
-                    <p class="verse-info">  آية رقم: ${verse}</p>
-                    <p class="verse-text verse-text-special"> ${texte}</p>
-                `;
-                appendToConsole(resultMessage, 'success');
-            } else {
-                appendToConsole('Aucun verset trouvé dans la base de données.', 'info');
-            }
-        } catch (error) {
-            console.error('Erreur lors de la conversion en JSON :', error.message);
-            console.log('Réponse brute :', text);
-            appendToConsole('Erreur inattendue lors de l\'enregistrement : réponse non valide.', 'error');
-        }
-    } catch (error) {
-        appendToConsole('Erreur lors de l\'enregistrement : ' + error.message, 'error');
-    }
-}
-
-function stopRecording() {
-    // Vous pouvez ajouter du code ici si nécessaire
-}
-
-function appendToConsole(message, className) {
-    var consoleDiv = document.getElementById('console');
-
-    while (consoleDiv.firstChild) {
-        consoleDiv.removeChild(consoleDiv.firstChild);
-    }
-
-    var messageDiv = document.createElement('div');
-    messageDiv.className = className;
-    messageDiv.innerHTML = message;
-    consoleDiv.appendChild(messageDiv);
-
-    consoleDiv.classList.add('visible');
-}
-</script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-    <script src="script.js"></script>
+    <script src="static/script.js"></script>
 </body>
 </html>
